recursion.cons.lessons.recursion.cons.ButLast.scala.code
def butLast(l:List[Int]): List[Int] = {
var rep = tableau:Array[Int] (l.length-1)
for(i <- 0 to l.length - 2)
{
		tableau(i) = l(i)	
}
return rep
}
